fixed div content overflow issue

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,24 +1,20 @@
 .container {
     padding: 0;
-}
-
-#bigContainer {
     margin: auto;
     width: 1100px;
-    /* padding: 0; */
 }
 
 #navbar {
     margin-top: 15px;
 }
 
-#banner {
+.banner {
     margin-bottom: 40px;
 }
 
 img {
-    width: 220px;
-    height: 220px;
+    width: 200px;
+    height: 200px;
     border-radius: 50%;
 }
 
@@ -33,6 +29,13 @@ img {
 
 .intro {
     padding: 0;
+    display: block;
+    word-wrap: break-word;
+}
+
+.profile-info {
+    max-width: 100%;
+    margin: 0;
 }
 
 
